@@ -7,14 +7,14 @@
 #
 # --enum    DBUS_POINTER_NAME1,
 #           DBUS_POINTER_NAME2,
-#           DBUS_POINTER_NAME3, 
-# 
+#           DBUS_POINTER_NAME3,
+#
 # --list    NAME1
 #           NAME2
 #           NAME3
-# 
+#
 
-
+from __future__ import print_function
 import re
 import sys
 
@@ -37,39 +37,33 @@ for arg in sys.argv[1:]:
 
 keyword = options.get("keyword", "struct")
 pattern = options.get("pattern", "%s")
-verbatim = options.has_key("verbatim")
+verbatim = "verbatim" in options
 
 structregexp1 = re.compile(r"^(typedef\s+)?%s\s+\w+\s+(\w+)\s*;" % keyword)
 structregexp2 = re.compile(r"^(typedef\s+)?%s" % keyword)
 structregexp3 = re.compile(r"^}\s+(\w+)\s*;")
 
-print "/* Generated by %s.  Do not edit! */" % sys.argv[0]
+print("/* Generated by %s.  Do not edit! */" % sys.argv[0])
 
 myinput = iter(sys.stdin)
 
 for line in myinput:
     match = structregexp1.match(line)
     if match is not None:
-        print toprint(match.group(2), line)
+        print(toprint(match.group(2), line))
         continue
 
     match = structregexp2.match(line)
     if match is not None:
         while True:
             if verbatim:
-                print line.rstrip()
-            line = myinput.next()
+                print(line.rstrip())
+            line = next(myinput)
             match = structregexp3.match(line)
             if match is not None:
-                print toprint(match.group(1), line)
+                print(toprint(match.group(1), line))
                 break
             if line[0] not in [" ", "\t", "{", "\n"]:
                 if verbatim:
-                    print line
+                    print(line)
                 break
-        
-
-
-
-    
-    
